// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationError should render with error message and reload 1`] = `
<DocumentFragment>
  <main
    class="light"
    data-testid="Main"
  >
    <div
      class="css-wsh4oq"
    >
      <nav
        aria-labelledby="main menu"
        class="css-97i12m"
      >
        <div
          class="relative flex h-21"
        >
          <div
            class="flex flex-1 px-8 sm:ml-12"
          >
            <div
              class="my-auto flex items-center"
            >
              <button
                class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    height="28"
                  >
                    payvo-logo.svg
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="flex flex-1 flex-col justify-center text-center css-ycib48"
        >
          <div
            class="mx-auto px-8 md:px-10 lg:container"
          >
            <div
              class="mx-auto flex w-full max-w-xs justify-center"
            >
              <svg>
                generic-error-light-green.svg
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="ApplicationError__text"
            >
              <h2
                class="text-2xl font-bold"
              >
                Something went wrong
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                It looks like something went wrong. Try visiting another page or reloading.
              </p>
              <p
                class="text-theme-secondary-text"
              >
                Please provide the error below when contacting support.
              </p>
            </div>
            <div
              class="mx-auto mt-8 max-w-md"
            >
              <div
                class="py-4 css-qner8f"
                disabled=""
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <textarea
                    autocomplete="off"
                    class="no-ligatures w-full border-none resize-none text-theme-secondary-text css-1nupw50"
                    data-testid="ErrorStep__errorMessage"
                    disabled=""
                    type="text"
                  >
                    some error
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="mx-auto mt-8 flex max-w-md items-center justify-center space-x-4"
            >
              <div
                class="relative"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="clipboard-button__wrapper"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Copy
                  </div>
                </button>
              </div>
              <button
                class="css-1bx0hyc"
                data-testid="ApplicationError__button--reload"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Reload
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ApplicationError should render without error message 1`] = `
<DocumentFragment>
  <main
    class="light"
    data-testid="Main"
  >
    <div
      class="css-wsh4oq"
    >
      <nav
        aria-labelledby="main menu"
        class="css-97i12m"
      >
        <div
          class="relative flex h-21"
        >
          <div
            class="flex flex-1 px-8 sm:ml-12"
          >
            <div
              class="my-auto flex items-center"
            >
              <button
                class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    height="28"
                  >
                    payvo-logo.svg
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="flex flex-1 flex-col justify-center text-center css-ycib48"
        >
          <div
            class="mx-auto px-8 md:px-10 lg:container"
          >
            <div
              class="mx-auto flex w-full max-w-xs justify-center"
            >
              <svg>
                generic-error-light-green.svg
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="ApplicationError__text"
            >
              <h2
                class="text-2xl font-bold"
              >
                Something went wrong
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                It looks like something went wrong. Try visiting another page or reloading.
              </p>
              <p
                class="text-theme-secondary-text"
              >
                Please provide the error below when contacting support.
              </p>
            </div>
            <div
              class="mx-auto mt-8 flex max-w-md items-center justify-center space-x-4"
            >
              <div
                class="relative"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="clipboard-button__wrapper"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Copy
                  </div>
                </button>
              </div>
              <button
                class="css-1bx0hyc"
                data-testid="ApplicationError__button--reload"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Reload
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
